Remodeled the entirity of the app to use requirejs, ES6 modules,etc.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <script type="text/javascript" src="dist/main.bundle.js">
-  </script>
+    <meta charset="utf-8">
+    <title></title>
+    <script type="text/javascript" src="dist/main.bundle.js">
+    </script>
+    <script>
+    const app = require('APP');
+</script>
 </head>
 
 <body>
-  <h3>sorting-js</h3>
+    <h3>sorting-js</h3>
 </body>
 
 </html>
