Replaced browserify with webpack, and added Jasmine tests that actually run.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript" src="dist/main.bundle.js">
+    <script type="text/javascript" src="dist/bundle.js">
     </script>
     <script>
-    const Sort = require('Sort');
-
-const a = new Sort();
+    const a = new cwg.Sort([10, 8, 6, 3, 8, 1, 0, 4]);
 console.log('====== SORTING-JS ======');
 console.log(`Original Array: ${a.toString()}`);
 
